Add basic infrastruture for tinygemm

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -196,10 +196,10 @@ if( MLOPEN_BACKEND MATCHES "OpenCL")
 	MESSAGE( STATUS "MLOpen linking OpenCL: ${OPENCL_INCLUDE_DIRS}" )
 	target_include_directories(MLOpen SYSTEM PUBLIC ${OPENCL_INCLUDE_DIRS} )
 	target_link_libraries( MLOpen ${OPENCL_LIBRARIES} )
-
-	target_include_directories(MLOpen SYSTEM PUBLIC "/home/fpadmin/tinygemm/tinygemm/include" )
-	target_link_libraries( MLOpen /home/fpadmin/temp/tinygemm/build/tinygemm/libtinygemm.so )
-		
 	
 endif()
 
+############################################################
+# MLOpen depends on tinygemm
+find_package(tinygemm REQUIRED)
+target_link_libraries( MLOpen tinygemm )
