Build shared libs by default

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -46,7 +46,6 @@ if( MLOPEN_BACKEND STREQUAL "OpenCL")
 	add_definitions( -DMLOPEN_BACKEND_HIP=0 )
 	add_definitions( -DMLOPEN_BACKEND_HIPOC=0 )
 	find_package( OpenCL REQUIRED )
-	set(MLOPEN_SHARED ON)
 endif()
 # HCC
 if( MLOPEN_BACKEND STREQUAL "HCC")
@@ -54,7 +53,6 @@ if( MLOPEN_BACKEND STREQUAL "HCC")
 	add_definitions( -DMLOPEN_BACKEND_HCC=1 )
 	add_definitions( -DMLOPEN_BACKEND_HIP=0 )
 	add_definitions( -DMLOPEN_BACKEND_HIPOC=0 )
-	set(MLOPEN_SHARED ON)
 	message( SEND_ERROR "${MLOPEN_BACKEND} backend not yet supported." )
 endif()
 # HIP
@@ -63,7 +61,6 @@ if( MLOPEN_BACKEND STREQUAL "HIP")
 	add_definitions( -DMLOPEN_BACKEND_HCC=0 )
 	add_definitions( -DMLOPEN_BACKEND_HIP=1 )
 	add_definitions( -DMLOPEN_BACKEND_HIPOC=0 )
-	set(MLOPEN_SHARED OFF)
 endif()
 # HIPOC
 if( MLOPEN_BACKEND STREQUAL "HIPOC")
@@ -87,7 +84,6 @@ if( MLOPEN_BACKEND STREQUAL "HIPOC")
 	message(STATUS "hip finalizer: ${HIP_OC_FINALIZER}")
 	add_definitions(-DHIP_OC_COMPILER="${HIP_OC_COMPILER}")
 	add_definitions(-DHIP_OC_FINALIZER="${HIP_OC_FINALIZER}")
-	set(MLOPEN_SHARED OFF)
 endif()
 message( STATUS "${MLOPEN_BACKEND} backend selected." )
 
@@ -95,7 +91,7 @@ message( STATUS "${MLOPEN_BACKEND} backend selected." )
 if( USE_Cobalt)
 endif()
 
-option( BUILD_SHARED_LIBS "Build as a shared library" ${MLOPEN_SHARED} )
+option( BUILD_SHARED_LIBS "Build as a shared library" ON )
 
 option( BUILD_DEV "Build for development only" OFF)
 
