Update cmake to use latest hip and hcc

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -89,6 +89,8 @@ if( MLOPEN_BACKEND STREQUAL "HIPOC")
 	)
 	message(STATUS "hip compiler: ${HIP_OC_COMPILER}")
 	message(STATUS "hip finalizer: ${HIP_OC_FINALIZER}")
+	find_package(hip)
+	link_libraries(stdc++)
 	add_definitions(-DHIP_OC_COMPILER="${HIP_OC_COMPILER}")
 	add_definitions(-DHIP_OC_FINALIZER="${HIP_OC_FINALIZER}")
 endif()
