Removed is_binary from everywhere, now it is determined from kernel file extension.

--- a/src/Kernels/kernel.cpp.in
+++ b/src/Kernels/kernel.cpp.in
@@ -10,7 +10,7 @@ static const std::map<std::string, std::string> kernels{
 	${INIT_KERNELS}
 };
 
-std::string GetKernelSrc(const std::string& name)
+std::string GetKernelSrc(const std::string& name, std::string& ext)
 {
     // Use the base name of the string
     int start = 0;
@@ -19,20 +19,23 @@ std::string GetKernelSrc(const std::string& name)
     {
         start = slash + 1;
     }
-    
+
     int len = name.size();
-    auto ex = name.rfind(".");
-    std::string ext;
-    if (ex != std::string::npos)
+    auto ext_start = name.rfind(".");
+    if (ext_start != std::string::npos)
     {
-        ext = name.substr(ex + 1);
-        len = ex - start;
+        ext = name.substr(ext_start + 1);
+        len = ext_start - start;
+    }
+    else
+    {
+        ext = "";
     }
 
     auto key = name.substr(start, len);
     // Convert to uppercase
     std::transform(key.begin(), key.end(), key.begin(), ::toupper);
-	std::transform(ext.begin(), ext.end(), ext.begin(), ::toupper);
+    std::transform(ext.begin(), ext.end(), ext.begin(), ::toupper);
 
     if (ext == "CL")
         return ReplaceString(kernels.at(key), "inline", "static inline");
