--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -108,7 +108,8 @@ if( MLOPEN_BACKEND MATCHES "OpenCL" OR MLOPEN_BACKEND STREQUAL "HIPOC")
 		Kernels/MLOpenConvBwdWrW_LxL.cl
 		Kernels/MLOpenConvBwdWrW_LxL_P.cl
 		Kernels/MLOpenConvBwdWrW_LxG_P53.cl
-		Kernels/conv_3x3_wheel_alpha_v2_0b_gfx803.so)
+		Kernels/conv_3x3_wheel_alpha_v2_0b_gfx803.so
+		Kernels/conv3x3.s)
 	
 	add_kernels("${MLOPEN_KERNELS}")
 	configure_file(db.cpp.in db.cpp)
