Check if kernel exists

--- a/src/Kernels/kernel.cpp.in
+++ b/src/Kernels/kernel.cpp.in
@@ -31,7 +31,10 @@ std::string GetKernelSrc(std::string name)
     // Convert to uppercase
     std::transform(key.begin(), key.end(), key.begin(), ::toupper);
 
-    return kernels.at(key);
+    auto it = kernels.find(key);
+    if (it == kernels.end()) MLOPEN_THROW("Failed to load kernel source: " + key);
+
+    return it->second;
 }
 
 } // namespace mlopen
