--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -4,12 +4,6 @@ include(CTest)
 option( MLOPEN_TEST_ALL "Run the full test suite" OFF )
 option( MLOPEN_TEST_ALL_GENERATORS "Test using all different data generators" OFF )
 
-if(MLOPEN_TEST_ALL)
-    add_definitions(-DMLOPEN_TEST_ALL=1)
-else()
-    add_definitions(-DMLOPEN_TEST_ALL=0)
-endif()
-
 if(MLOPEN_TEST_ALL_GENERATORS)
     add_definitions(-DMLOPEN_TEST_ALL_GENERATORS=1)
 else()
@@ -27,12 +21,17 @@ function(add_test_executable TEST_NAME)
     if(CMAKE_CXX_COMPILER_ID MATCHES "GNU") 
         set_target_properties(${TEST_NAME} PROPERTIES COMPILE_FLAGS -pthread LINK_FLAGS -pthread)
     endif()
-    if(WIN32)
-        add_test(NAME ${TEST_NAME} WORKING_DIRECTORY ${LIBRARY_OUTPUT_PATH} COMMAND $<TARGET_FILE:${TEST_NAME}>)
+    if(MLOPEN_TEST_ALL)
+        set(TEST_COMMAND $<TARGET_FILE:${TEST_NAME}> --all)
     else()
-        # add_test(NAME ${TEST_NAME} COMMAND $<TARGET_FILE:${TEST_NAME}>)
+        set(TEST_COMMAND $<TARGET_FILE:${TEST_NAME}>)
+    endif()
+    if(WIN32)
+        add_test(NAME ${TEST_NAME} WORKING_DIRECTORY ${LIBRARY_OUTPUT_PATH} COMMAND ${TEST_COMMAND})
+    else()
+        add_test(NAME ${TEST_NAME} COMMAND ${TEST_COMMAND})
         # TODO: Quick hack to fix relative paths to kernels
-        add_test(NAME ${TEST_NAME} WORKING_DIRECTORY ${CMAKE_BINARY_DIR} COMMAND $<TARGET_FILE:${TEST_NAME}>)
+        # add_test(NAME ${TEST_NAME} WORKING_DIRECTORY ${CMAKE_BINARY_DIR} COMMAND ${TEST_COMMAND})
     endif()
     add_dependencies(tests ${TEST_NAME})
     add_dependencies(check ${TEST_NAME})
