Change to use hip_LIBRARIES

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -233,7 +233,7 @@ if( MLOPEN_BACKEND STREQUAL "OpenCL")
 	target_include_directories(MLOpen SYSTEM PUBLIC ${OPENCL_INCLUDE_DIRS} )
 	target_link_libraries( MLOpen ${OPENCL_LIBRARIES} )
 elseif(MLOPEN_BACKEND STREQUAL "HIPOC")
-	target_link_libraries( MLOpen hip::hip_hcc )
+	target_link_libraries( MLOpen ${hip_LIBRARIES} )
 endif()
 
 ############################################################
