rename ML conv1x1 into MI conv 1x1

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -102,7 +102,7 @@ if( MIOPEN_BACKEND MATCHES "OpenCL" OR MIOPEN_BACKEND STREQUAL "HIPOC")
 		Kernels/MIOpenPooling.cl
 		Kernels/MIOpenPoolingBwd.cl
 		Kernels/MIOpenConvDirUniC.cl		
-		Kernels/MLOpenConv1x1.cl
+		Kernels/MIOpenConv1x1.cl
 		Kernels/MIOpenSoftmax.cl
 		Kernels/MIOpenConvD3x3.cl
 		Kernels/MIOpenUtilKernels.cl
