Add support for nsis

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -143,7 +143,7 @@ option( BUILD_SHARED_LIBS "Build as a shared library" ON )
 option( BUILD_DEV "Build for development only" OFF)
 
 include(GNUInstallDirs)
-set( MIOPEN_INSTALL_DIR ${CMAKE_INSTALL_PREFIX}/miopen)
+set( MIOPEN_INSTALL_DIR miopen)
 set( BIN_INSTALL_DIR ${MIOPEN_INSTALL_DIR}/${CMAKE_INSTALL_BINDIR} )
 set( LIB_INSTALL_DIR ${MIOPEN_INSTALL_DIR}/${CMAKE_INSTALL_LIBDIR} )
 set( INCLUDE_INSTALL_DIR ${MIOPEN_INSTALL_DIR}/${CMAKE_INSTALL_INCLUDEDIR} )
