Add if for win32

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -243,4 +243,6 @@ if(tinygemm_FOUND)
 	target_link_libraries( MIOpen tinygemm )
 endif()
 
-target_link_libraries(MIOpen -Wl,-export-all-symbols -Wl,-exclude-symbols=_Unwind_Resume)
+if(WIN32)
+	target_link_libraries(MIOpen -Wl,-export-all-symbols -Wl,-exclude-symbols=_Unwind_Resume)
+endif()
