--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -21,7 +21,7 @@ function(add_test_executable TEST_NAME)
     else()
         set(TEST_COMMAND $<TARGET_FILE:${TEST_NAME}>)
     endif()
-    add_test(NAME ${TEST_NAME} COMMAND ${TEST_COMMAND})
+    add_test(NAME ${TEST_NAME} COMMAND ${WINE_CMD} ${TEST_COMMAND})
     add_dependencies(tests ${TEST_NAME})
     add_dependencies(check ${TEST_NAME})
     set_tests_properties(${TEST_NAME} PROPERTIES FAIL_REGULAR_EXPRESSION "FAILED")
