Optionally install the driver

--- a/driver/CMakeLists.txt
+++ b/driver/CMakeLists.txt
@@ -1,16 +1,11 @@
 cmake_minimum_required( VERSION 2.8.12 )
 
-project(driver)
-message (STATUS "Building MIOpen Driver")
-
-set( MIOPEN_LIB_SUFFIX "")
-if( ${BUILD64} )
-	set( MIOPEN_LIB_SUFFIX "64")
-	set_property( GLOBAL PROPERTY FIND_LIBRARY_USE_LIB64_PATHS TRUE )
-endif( )
-
 #add_executable(MIOpenDriver MIOpenDriver.cpp InputFlags.cpp)
 
 add_executable(MIOpenDriver EXCLUDE_FROM_ALL main.cpp InputFlags.cpp)
 target_link_libraries(MIOpenDriver MIOpen)
-
+install(TARGETS MIOpenDriver 
+    OPTIONAL 
+    RUNTIME DESTINATION ${BIN_INSTALL_DIR}
+    LIBRARY DESTINATION ${LIB_INSTALL_DIR}
+    ARCHIVE DESTINATION ${LIB_INSTALL_DIR})
