--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -45,6 +45,12 @@ function(add_custom_test NAME)
     add_test(NAME ${NAME} COMMAND ${CMAKE_COMMAND} --build ${CMAKE_CURRENT_BINARY_DIR} --target ${NAME})
 endfunction()
 
+if(MIOPEN_TEST_EXTRA)
+    add_custom_test(test_extra
+    COMMAND $<TARGET_FILE:test_conv> --verbose --input 8 1 161 700  --weights 32 1 5 20 --filter 0 0 2 2
+    COMMAND $<TARGET_FILE:test_conv> --verbose --input 8 32 79 341  --weights 32 32 5 10 --filter 0 0 2 2
+    )
+
 if(MIOPEN_TEST_DEEPBENCH)
     add_custom_test(test_deepbench
     COMMAND $<TARGET_FILE:test_conv> --verbose --input 4 1 161 700  --weights 32 1 5 20 --filter 0 0 2 2
