Removed redundant file. Added error for include file not found.

--- a/AddKernels/CMakeLists.txt
+++ b/AddKernels/CMakeLists.txt
@@ -1,5 +1,5 @@
 project(AddKernels)
 
-set(ADD_KERNELS_SOURCE source_file_desc.cpp source_inliner.cpp addkernels.cpp)
+set(ADD_KERNELS_SOURCE source_inliner.cpp addkernels.cpp)
 
 add_executable(addkernels EXCLUDE_FROM_ALL ${ADD_KERNELS_SOURCE})
