Fix more warnings

--- a/driver/CMakeLists.txt
+++ b/driver/CMakeLists.txt
@@ -1,6 +1,8 @@
 cmake_minimum_required( VERSION 2.8.12 )
 
 #add_executable(MIOpenDriver MIOpenDriver.cpp InputFlags.cpp)
+# Allow c casts for now since it is everywhere in the driver
+add_definitions(-Wno-old-style-cast)
 
 add_executable(MIOpenDriver EXCLUDE_FROM_ALL main.cpp InputFlags.cpp)
 target_link_libraries(MIOpenDriver MIOpen)
