--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -5,6 +5,8 @@ option( MIOPEN_TEST_ALL "Run the full test suite" OFF )
 option(MIOPEN_TEST_CONV Off)
 option(MIOPEN_TEST_DEEPBENCH Off)
 
+set(MIOPEN_TEST_FLAGS "" CACHE STRING "")
+
 find_package(Threads REQUIRED)
 add_custom_target(check COMMAND ${CMAKE_CTEST_COMMAND} --output-on-failure -C ${CMAKE_CFG_INTDIR})
 add_custom_target(tests)
@@ -17,9 +19,9 @@ function(add_test_executable TEST_NAME)
         set_target_properties(${TEST_NAME} PROPERTIES COMPILE_FLAGS -pthread LINK_FLAGS -pthread)
     endif()
     if(MIOPEN_TEST_ALL)
-        set(TEST_COMMAND $<TARGET_FILE:${TEST_NAME}> --all)
+        set(TEST_COMMAND $<TARGET_FILE:${TEST_NAME}> --all ${MIOPEN_TEST_FLAGS})
     else()
-        set(TEST_COMMAND $<TARGET_FILE:${TEST_NAME}>)
+        set(TEST_COMMAND $<TARGET_FILE:${TEST_NAME}> ${MIOPEN_TEST_FLAGS})
     endif()
     add_test(NAME ${TEST_NAME} COMMAND ${WINE_CMD} ${TEST_COMMAND})
     add_dependencies(tests ${TEST_NAME})
